--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">loftMoney</string>
+    <string name="edettext_name_hint">Title</string>
+    <string name="edittext_price_hint">Price</string>
+    <string name="add_button_title">Add</string>
 </resources>
